certifications/ckad/f.services/deployment-nginx-policy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-policy
  name: nginx-policy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-policy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-policy
    spec:
      containers:
      - image: nginx:1.20.1-alpine
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
