certifications/ckad/f.services/pod-exposed.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: nginx-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx-service
status:
  loadBalancer: {}
---
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-service
  name: nginx-service
spec:
  containers:
  - image: nginx:1.20.1-alpine
    name: nginx-service
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
